--- a/overlay-evolution/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-evolution/frameworks/base/core/res/res/values/config.xml
@@ -30,4 +30,7 @@
 
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">false</bool>
+
+    <!-- Whether to show settings for hiding notch fill -->
+    <bool name="config_showHideNotchSettings">true</bool>
 </resources>
